# temaemiso

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  run.ps1
.github/ISSUE_TEMPLATE/: custom.md
.github/PULL_REQUEST_TEMPLATE/: base_template.md
.github/workflows/: django.yml
gunicorn/: settings.py
nginx/: default.conf
temaemiso/: asgi.py  settings.py  urls.py  wsgi.py
temaemiso/blog/: admin.py  apps.py  models.py  urls.py  views.py
temaemiso/blog/migrations/: 0001_initial.py  0002_article_article_title.py  0003_article_article_overview_alter_article_article_title_and_more.py  0004_alter_article_article_title_alter_content_article_id_and_more.py  0005_alter_article_article_title.py  0006_alter_article_article_title.py  0007_alter_article_article_title.py  0008_alter_article_article_title.py  0009_alter_article_article_title.py  0010_alter_article_article_title.py  0011_alter_article_article_title.py  0012_alter_article_article_title.py  0013_alter_article_article_title.py  0014_alter_article_article_title.py  0015_alter_article_article_title.py  0016_alter_article_article_title.py  0017_alter_article_article_title.py  0018_alter_article_article_title.py  0019_alter_article_article_title.py  0020_alter_article_article_title.py  0021_alter_article_article_title.py  0022_alter_article_article_title.py  0023_alter_article_article_title.py  0024_alter_article_article_title.py  0025_alter_article_article_title.py  0026_alter_article_article_title.py  0027_alter_article_article_title.py  0028_alter_article_article_title.py  (+42 more)
(+17 files in other folders)
