[tool.poetry]
name = "55-temaemiso"
version = "0.1.0"
description = ""
authors = ["satsuma-ken <sakurajima.ken@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
